# aoc2024

./: CMakeLists.txt  Makefile  knut.h  knut_ds.h  knut_io.h
day1/: CMakeLists.txt  main.c
day10/: CMakeLists.txt  main.c
day11/: CMakeLists.txt  day11.lua  main.c
day2/: CMakeLists.txt  main.c
day3/: CMakeLists.txt  main.c
day4/: CMakeLists.txt  main.c
day5/: CMakeLists.txt  main.c
day6/: CMakeLists.txt  main.c
day7/: CMakeLists.txt  main.c
day8/: CMakeLists.txt  main.c
day9/: CMakeLists.txt  main.c
